Add logout endpoint
